--- a/output/index.html
+++ b/output/index.html
@@ -244,7 +244,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
   <p>נקודה חשובה בתהליך- המטופל יוזם שתי פעולות בלבד: הגעה לביקור במסגרתו הוא מקבל את ההפניה וביצוע הבדיקות. יתר השלבים בהם עובר מידע מבוצעים אוטומטית ע”י ארגוני הבריאות.</p>
 
-  <p><img src="./LRC_Business_Flow.pdf" alt="תרשים העברת הפניות מארגון מטפל לארגון בודק וקבלת התוצאות בחזרה" /></p>
+  <p><img src="./LRC_Business_Flow.jpg" alt="תרשים העברת הפניות מארגון מטפל לארגון בודק וקבלת התוצאות בחזרה" /></p>
 
   <p>התרשים מציג את הפעולות באופן כרונולוגי, עם פערי זמן קבועים. בפועל, בכל תהליך יוגדרו טווחי הזמן הרלוונטיים עבורו. בנוסף, יתכן שחלק מהפעולות יבוצעו סינכרונית, למשל שליחת התוצאות לארגון המטפל בו בזמן שהן מתקבלות במעבדה של הארגון הבודק.</p>
 
