--- a/output/qa.html
+++ b/output/qa.html
@@ -363,10 +363,10 @@ il.core.fhir.r4#0.13.2:     <a href="https://simplifier.net/resolve?scope=il.cor
      <td><b>Observation.subject (l45/c4)</b></td><td><b>error</b></td><td title="Reference_REF_CantResolve"><b>Unable to resolve resource with reference 'http://hapi-fhir.outburn.co.il/fhir/Patient/90'</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b>Observation&#8203;.referenceRange[0]&#8203;.low (l65&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
+     <td><b>Observation&#8203;.referenceRange[0]&#8203;.low (l65&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b>Observation&#8203;.referenceRange[0]&#8203;.high (l70&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
+     <td><b>Observation&#8203;.referenceRange[0]&#8203;.high (l70&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
    </tr>
 </table>
 <hr/>
@@ -388,10 +388,10 @@ il.core.fhir.r4#0.13.2:     <a href="https://simplifier.net/resolve?scope=il.cor
      <td><b>Observation.subject (l45/c4)</b></td><td><b>error</b></td><td title="Reference_REF_CantResolve"><b>Unable to resolve resource with reference 'http://hapi-fhir.outburn.co.il/fhir/Patient/90'</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b>Observation&#8203;.referenceRange[0]&#8203;.low (l65&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
+     <td><b>Observation&#8203;.referenceRange[0]&#8203;.low (l65&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b>Observation&#8203;.referenceRange[0]&#8203;.high (l70&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
+     <td><b>Observation&#8203;.referenceRange[0]&#8203;.high (l70&#8203;/c8)</b></td><td><b>error</b></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b> (from <a href="qa-txsrvr.html#"></ta>, see <a href="qa-tx.html#l27">log</a>)</td>
    </tr>
 </table>
 <hr/>
@@ -635,16 +635,16 @@ il.core.fhir.r4#0.13.2:     <a href="https://simplifier.net/resolve?scope=il.cor
 <h2>Terminology_TX_Confirm_4a</h2>
  <table class="grid">
    <tr style="background-color: #ffeeee">
-     <td><a href="Observation-lrc-result-oncology-calcium.html">fsh-generated\resources\Observation-lrc-result-oncology-calcium.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
+     <td><a href="Observation-lrc-result-oncology-calcium.html">fsh-generated\resources\Observation-lrc-result-oncology-calcium.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
    </tr>
    <tr style="background-color: #ffeeee">
-     <td><a href="Observation-lrc-result-oncology-calcium.html">fsh-generated\resources\Observation-lrc-result-oncology-calcium.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
+     <td><a href="Observation-lrc-result-oncology-calcium.html">fsh-generated\resources\Observation-lrc-result-oncology-calcium.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
    </tr>
    <tr style="background-color: #ffeeee">
-     <td><a href="Observation-lrc-result-oncology-urea.html">fsh-generated\resources\Observation-lrc-result-oncology-urea.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
+     <td><a href="Observation-lrc-result-oncology-urea.html">fsh-generated\resources\Observation-lrc-result-oncology-urea.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
    </tr>
    <tr style="background-color: #ffeeee">
-     <td><a href="Observation-lrc-result-oncology-urea.html">fsh-generated\resources\Observation-lrc-result-oncology-urea.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dl) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dl' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
+     <td><a href="Observation-lrc-result-oncology-urea.html">fsh-generated\resources\Observation-lrc-result-oncology-urea.json</a></td><td><b>The code provided (http://unitsofmeasure.org#mg/dL) was not found in the value set 'Common UCUM units' (http://hl7.org/fhir/ValueSet/ucum-common|4.0.1), and a code from this value set is required: The provided code 'http://unitsofmeasure.org#mg/dL' was not found in the value set 'http://hl7.org/fhir/ValueSet/ucum-common|4.0.1'</b></td>
    </tr>
 </table>
 <hr/>
